examples/test/testpolicy16594.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy16594
  namespace: namespace182
spec:
  podSelector:
    matchLabels:
      key20: value39
      key41: value47
      key26: value35
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key31: value20
      podSelector:
        matchLabels:
          key18: value20
          key5: value14
          key14: value10
